tests/fail/elaboration/unsolved/fun-literal-placeholder-body-type.fathom
//~ allow-errors = true

fun (A : Type) a (b : A) => a : fun (A : Type) -> _
